Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/InsCoverage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>CovAmount__c</fullName>
        <label>CovAmount</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoverageType__c</fullName>
        <label>CoverageType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>InsCoverage</label>
</CustomObject>